# Nemaxks

./: .editorconfig  .env.example  .gitignore  .gitmodules  .replit  AI_INTEGRATION_GUIDE.md  CONTRIBUTING.md  GRPC_SETUP.md  JARVIS_COMMAND_CONTRACT.md  JARVIS_INTEGRATION_SETUP.md  JARVIS_MAIN_GO_INTEGRATION.md  JARVIS_TESTING_GUIDE.md  LICENSE  Makefile  NEMAKS_PROJECT_COMPLETION_SUMMARY.md  PHASE5_FINAL_INTEGRATION.md  PLATFORM_DOCUMENTATION.md  PROJECT_COMPLETION_STATUS.go  README.md  REDIS_LIVEKIT_SETUP.md  ROADMAP.md  RUN.bat  SECURITY.md  SUBSCRIPTION_BILLING_SYSTEM.md  VALIDATION_SUMMARY.md  docker-compose.yml  envoy.yaml  go.mod  install-backend.bat  livekit.yaml  package-lock.json  package.json  quick-start.bat  replit.md  start-backend.bat  start.bat  start.sh  stop.bat  stop.sh  validate.bat  (+1 more)
.github/: pull_request_template.md
attached_assets/: AUTH_IMPLEMENTATION_REPORT.md  Pasted---1767539038607_1767539038608.txt  Pasted--GIN-2026-01-06-02-37-56-500-44-52111ms-127-0-0-1-GET-a_1767667114173.txt  Pasted--plugin-vite-react-babel-home-runner-workspace-frontend_1767481070948.txt  Pasted--plugin-vite-react-babel-home-runner-workspace-frontend_1767485223145.txt  Pasted-03-01-2026-07-50-DIR-03-01-2026-07-50-DIR-11-05-2013-21_1767416232400.txt  Pasted-2026-01-04-23-31-48-home-runner-workspace-backend-handl_1767569551837.txt  Pasted-2026-01-04-23-52-05-home-runner-workspace-backend-main-_1767571150174.txt  Pasted-2026-01-05-11-21-53-home-runner-workspace-backend-handl_1767612128011.txt  Pasted-2026-01-06-02-27-25-home-runner-workspace-backend-main-_1767666500867.txt  Pasted-2026-01-09-19-45-26-Voice-join-user-3-joined-channel-20_1767987954547.txt  Pasted-cat-backend-main-go-EOF-package-main-import-fmt-log-os-_1767408363895.txt  Pasted-cat-backend-websocket-go-EOF-package-main-import-fmt-lo_1767408389397.txt  Pasted-cat-cmd-ai-main-go-EOF-package-main-import-bytes-encodi_1767409070775.txt  Pasted-cd-workspace-backend-mkdir-p-cmd-api-cat-cmd-api-main-g_1767409054919.txt
backend/: Dockerfile  REALTIME_COLLABORATION_GUIDE.md  audit.go  (+40 more)
rust-services/audit-service/: Cargo.toml  Dockerfile  build.rs
rust-services/audit-service/src/: main.rs
rust-services/search-service/: Cargo.toml  Dockerfile  build.rs
rust-services/search-service/src/: main.rs
rust-services/services/message-service/: Cargo.toml
rust-services/services/message-service/src/: cache.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
rust-services/services/voice-service/: Cargo.toml
rust-services/services/voice-service/src/: main.rs
(+129 files in other folders)
