[package]

[[bin]]
name = "voice-service"
path = "src/main.rs"
name = "$service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = "0.7"
redis = { version = "0.24", features = ["aio", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
shared = { path = "../../shared" }
